# cmake-qt-point-of-sales

./: CMakeLists.txt  README.md  main.cpp  poswindow.cpp  poswindow.h  poswindow.ui
